--- a/public/main.css
+++ b/public/main.css
@@ -15,6 +15,7 @@ html {
 
 body {
     background-color: transparent;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 li {
@@ -42,11 +43,15 @@ ol, ul {
     padding-left: 0;
 }
 
+img {
+    display: block;
+    width: 100%;
+}
+
 .block {
-    background-color: #000;
-    border-radius: 7px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
     overflow: hidden;
-    opacity: .7;
     display: flex;
     padding: 20px;
 }
