--- a/src/components/randomBlock/randomBlock.css
+++ b/src/components/randomBlock/randomBlock.css
@@ -3,6 +3,7 @@
     border-radius: 10px;
     overflow: hidden;
     border: 3px solid #000;
+    background-color: #000;
 }
 
 .random-block-info {
