--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -1,6 +1,6 @@
 .loader {
     width: 100%;
-    height: 100%;
+    padding: 50px 0px;
     display: flex;
     justify-content: center;
     align-items: center;
