--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -15,3 +15,18 @@
     align-items: flex-start;
     margin-top: 30px;
 }
+
+.app-toggle {
+    margin-top: 15px;
+}
+
+.app-button {
+    padding: 5px 20px;
+    background-color: orange;
+    border-radius: 10px;
+    transition: background-color .2s ease;
+}
+
+.app-button:hover {
+    background-color: rgb(230, 150, 1);
+}
