--- a/src/components/itemList/itemList.css
+++ b/src/components/itemList/itemList.css
@@ -18,4 +18,10 @@
     width: 100%;
     border: 1px solid rgb(29, 29, 29);
     border-radius: 7px;
+    background-color: rgb(58, 58, 58);
+    transition: background-color .2s ease;
+}
+
+.item-list-button:hover {
+    background-color: rgb(87, 87, 87);
 }
