--- a/public/main.css
+++ b/public/main.css
@@ -63,5 +63,6 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: 10px;
     overflow: hidden;
     display: flex;
+    align-items: flex-start;
     padding: 20px;
 }
