--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,6 @@
 * {
     color: #fff;
+    box-sizing: border-box;
 }
 
 html {
@@ -17,6 +18,7 @@ body {
     background-color: transparent;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-shadow: #000 0px 0px 8px;
+    font-size: 18px;
     /* letter-spacing: 0.5px !important; */
 }
 
@@ -29,6 +31,7 @@ button {
     margin: 0;
     padding: 0;
     background-color: transparent;
+    cursor: pointer;
 }
 
 button, 
