--- a/public/main.css
+++ b/public/main.css
@@ -8,7 +8,7 @@ html {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    background-image: url('./sw-background.jpg');
+    background-image: url('./img/sw-background.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -58,5 +58,5 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 0;
+    margin: 0;
 }
